@@ -987,6 +987,11 @@ static rpmRC runScript(rpmpsm psm, Header h, const char * sln,
 
     /* XXX FIXME: except for %verifyscript, rpmteNEVR can be used. */
     xx = headerNVR(h, &n, &v, &r);
+
+    /* XXX bash must have functional libtermcap.so.2 */
+    if (!strcmp(n, "libtermcap"))
+	ldconfig_done = 0;
+
     /*
      * If a successor node, and ldconfig was just run, don't bother.
      */
