@@ -16,7 +16,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.7
+Release: 0.8
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -482,6 +482,9 @@ exit 0
 %{__prefix}/include/popt.h
 
 %changelog
+* Wed Nov 13 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.8
+- fix: bash must have functional libtermcap.so.2.
+
 * Sat Nov  9 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.7
 - add _javadir/_javadocdir/_javaclasspath macros.
 
